--- a/scss/_t.scss
+++ b/scss/_t.scss
@@ -9,6 +9,16 @@
     font-size: 16px;
   }
 
+  &--20sb {
+    @extend .t-title;
+    font-weight: 600;
+    font-size: 18px;
+
+    @include tablet {
+      font-size: 20px;
+    }
+  }
+
   &--20b {
     @extend .t-title;
     font-weight: 700;
@@ -59,6 +69,26 @@
     @extend .t-body;
     font-weight: 300;
     font-size: 14px;
+  }
+
+  &--16l {
+    @extend .t-body;
+    font-weight: 300;
+    font-size: 14px;
+
+    @include tablet {
+      font-size: 16px;
+    }
+  }
+
+  &--16sb {
+    @extend .t-body;
+    font-weight: 600;
+    font-size: 14px;
+
+    @include tablet {
+      font-size: 16px;
+    }
   }
 
   &--18sb {
