--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -9,3 +9,5 @@ $sansTitle: 'Work Sans', Helvetica, sans-serif;
 $sansBody: 'Open Sans', Helvetica, sans-serif;
 
 $navHt: 50px;
+$maxTextWidth16: 700px;
+$maxTextWidth20: 1000px;
