--- a/scss/_work.scss
+++ b/scss/_work.scss
@@ -7,6 +7,10 @@
   @include tablet {
     padding: 40px;
   }
+
+  @include largedesktop {
+    padding: 40px 80px;
+  }
 }
 
   .work_sectionTitle {
